# ACE

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  ace.db  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  pr_checklist.yml
ace/: __init__.py  cli.py  pipeline.py  utils.py
ace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ace/core/: README_REGRESSION.md  config.py  manager.py  merge.py  metrics.py  reflect.py  regression.py  retrieve.py  schema.py  store.py
ace/curator/: __init__.py  curator.py  prompts.py  semantic_matcher.py
ace/eval/: __init__.py  harness.py  metrics.py
ace/generator/: __init__.py  generator.py  schemas.py
ace/llm/: __init__.py  client.py  factory.py  schemas.py
ace/mcp/: __init__.py  server.py  stats.py
ace/refine/: __init__.py  runner.py
ace/reflector/: __init__.py  parser.py  prompts.py  reflector.py  schema.py
ace/serve/: __init__.py  runner.py  schema.py
ace/train/: __init__.py  runner.py  schema.py
ace_mcp_server/: __init__.py  __main__.py  server.py
configs/: default.toml
core/storage/: bullet_store.py  db.py  embedding_store.py
docs/: ACE-82-improvements.md  MCP_USAGE_GUIDE.md  api-reference.md  configuration.md  eval-harness-plan.md  retrieval-bench-improvements.md  smoke-test-usage.md
docs/arch-diagrams/: cicd-pipeline.md  component-view.md  curate-merge-refine-logic.md  data-model.md  deployment.md  failure-guided-triage.md  implementation-checklist.md  mcp-tooling-surface.md  (+5 more)
eval/: README.md  retrieval_bench.py  test_dedup_bench.py  test_helpers.py  test_reflection_bench.py  test_retrieval_bench.py
scripts/: seed.py
tests/: conftest.py  test_config.py  test_curator.py  test_db_path_resolution.py  test_eval_harness.py  test_generator.py  test_harness_integration.py  test_llm_client.py  test_llm_factory.py  test_llm_integration.py  test_mcp_server.py  test_merge.py  test_metrics.py  test_pipeline.py  test_pipeline_integration.py  test_refiner.py  test_reflector.py  test_regression.py  test_retrieval_metrics.py  test_schema.py  test_serve.py  test_smoke_test_command.py  test_store.py  test_train.py  test_utils.py
(+11 files in other folders)
