[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ace"
version = "0.1.0"
description = "Agentic Context Engineering - evolve LLM context via playbook deltas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.0.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
